--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -18,6 +18,7 @@
     "@types/pdfkit": "^0.17.3",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "docx": "^9.5.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
