--- a/coldwell-banker-mobile/package.json
+++ b/coldwell-banker-mobile/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
     "axios": "^1.13.2",
-    "expo": "~54.0.23",
+    "expo": "~54.0.25",
     "expo-document-picker": "^14.0.7",
-    "expo-file-system": "~19.0.17",
+    "expo-file-system": "~19.0.19",
     "expo-secure-store": "^15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.7",
     "typescript": "~5.9.2"
   },
   "private": true
