--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,6 @@
     "@types/pdfkit": "^0.17.3",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "docx": "^9.5.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +33,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
