--- a/coldwell-banker-web/.env
+++ b/coldwell-banker-web/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://api-inmobiliaria-production.up.railway.apppi-inmobiliaria-production.up.railway.app
+VITE_API_URL=https://api-inmobiliaria-production.up.railway.app
