--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.19.0",
     "@types/pdfkit": "^0.17.3",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "docxtemplater": "^3.67.5",
     "dotenv": "^17.2.3",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
