fix: corregir comando start para producción (remover db push)

--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "prisma generate && tsc && copyfiles -u 1 src/templates/* dist",
-    "start": "prisma db push --accept-data-loss && node dist/server.js",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
